Fix default buttons dark mode

--- a/src/styles/antd-overrides/button.scss
+++ b/src/styles/antd-overrides/button.scss
@@ -1,6 +1,6 @@
 .ant-btn {
   background: transparent;
-  @apply stroke-action-secondary;
+  @apply border-haze-400 dark:border-slate-300;
   @apply text-over-action-secondary;
   @apply font-medium;
   border-radius: 1px;
