--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -29,7 +29,7 @@
   @apply text-white dark:text-haze-900;
 }
 .text-over-action-secondary {
-  @apply text-haze-400 dark:text-haze-300;
+  @apply text-haze-400 dark:text-slate-100;
 }
 
 .text-warning {
